; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_large.c_large_dalloc_maybe_junk_impl.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_large.c_large_dalloc_maybe_junk_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@config_fill = common dso_local global i64 0, align 8
@have_dss = common dso_local global i64 0, align 8
@opt_junk_free = common dso_local global i32 0, align 4
@opt_retain = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64)* @large_dalloc_maybe_junk_impl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @large_dalloc_maybe_junk_impl(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* @config_fill, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %29

7:                                                ; preds = %2
  %8 = load i64, i64* @have_dss, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %29

10:                                               ; preds = %7
  %11 = load i32, i32* @opt_junk_free, align 4
  %12 = call i64 @unlikely(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %29

14:                                               ; preds = %10
  %15 = load i64, i64* @opt_retain, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %24, label %17

17:                                               ; preds = %14
  %18 = load i64, i64* @have_dss, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %28

20:                                               ; preds = %17
  %21 = load i8*, i8** %3, align 8
  %22 = call i64 @extent_in_dss(i8* %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %20, %14
  %25 = load i8*, i8** %3, align 8
  %26 = load i64, i64* %4, align 8
  %27 = call i32 @large_dalloc_junk(i8* %25, i64 %26)
  br label %28

28:                                               ; preds = %24, %20, %17
  br label %29

29:                                               ; preds = %28, %10, %7, %2
  ret void
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i64 @extent_in_dss(i8*) #1

declare dso_local i32 @large_dalloc_junk(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
